--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -95,8 +95,8 @@ jobs:
         id: output_ip
         working-directory: terraform
         run: |
-          terraform output ec2_public_ip || echo "No output"
-          IP=$(terraform output -raw ec2_public_ip)
+          terraform output ec2-ip || echo "No output"
+          IP=$(terraform output -raw ec2-ip)
           echo "ec2_ip=$IP" >> $GITHUB_OUTPUT
 
 
