--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -95,8 +95,11 @@ jobs:
         id: output_ip
         working-directory: terraform
         run: |
+          terraform output ec2-ip
           IP=$(terraform output -raw ec2-ip | tr -d '"')
+          echo "✅ EC2 Public IP: $IP"
           echo "ec2_ip=$IP" >> $GITHUB_OUTPUT
+
 
 
 
