--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -95,7 +95,7 @@ jobs:
         working-directory: ./terraform
         id: get_ip
         run: |
-          IP=$(terraform output -raw ec2_public_ip)
+          IP=$(terraform output -raw ec2-ip)
           echo "ec2_ip=${IP}" >> $GITHUB_OUTPUT
 
 
