--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -95,9 +95,8 @@ jobs:
         working-directory: ./terraform
         id: get_ip
         run: |
-          echo $(terraform output ec2-ip) >> ec2_ip
-          echo $(cat ec2_ip) >> $GITHUB_OUTPUT
-        shell: bash
+          EC2_IP=$(terraform output -raw ec2-ip)
+          echo "EC2_IP=$EC2_IP" >> $GITHUB_ENV
 
 
 
