--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -96,7 +96,7 @@ jobs:
         id: get_ip
         run: |
           EC2_IP=$(terraform output -raw ec2-ip)
-          echo "EC2_IP=$EC2_IP" >> $GITHUB_ENV
+          echo "EC2_IP=$EC2_IP" >> $GITHUB_OUTPUT
 
 
 
